--- a/abusive_speech_detection.ipynb
+++ b/abusive_speech_detection.ipynb
@@ -6,8 +6,8 @@
       "name": "abusive-speech-detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpVnLsndUGW/VMvJHIJh1E",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPovu+nJE1SLQozBq5QLW/N",
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
@@ -25,18 +25,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hate-speech-classification/abusive-level-classification/blob/main/abusive_speech_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hate-speech-classification/abusive-level-classification/blob/patch/abusive_speech_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sLBHplZdXhe_",
-        "outputId": "a4f09b45-1f37-45d0-f2e0-6e3665163f43"
+        "outputId": "3c00a504-a62d-4ccf-d2d3-b25ce698b32d"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
           "name": "stdout",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         }
       ],
@@ -66,23 +66,18 @@
         "from nltk.corpus import stopwords\n",
         "import re\n",
         "from bs4 import BeautifulSoup\n",
-        "%matplotlib inline\n",
-        "# Import necessary modules\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import mean_squared_error\n",
-        "from math import sqrt\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.model_selection import KFold\n",
-        "from sklearn.model_selection import LeaveOneOut\n",
-        "from sklearn.model_selection import LeavePOut\n",
-        "from sklearn.model_selection import ShuffleSplit\n",
-        "from sklearn.model_selection import StratifiedKFold"
+        "%matplotlib inline"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
+        "Read data from csv (url from github)\n",
+        "\"\"\"\n",
+        "url_train_data = 'https://raw.githubusercontent.com/amandacurry/convabuse/main/2_splits/ConvAbuseEMNLPtrain.csv'\n",
+        "df = pd.read_csv(url_train_data)\n",
+        "\n",
         "\"\"\"\n",
         "Create new column labels\n",
         "\"\"\"\n",
@@ -96,12 +91,17 @@
         "  elif row['Annotator1_is_abuse.-2'] == '1':\n",
         "    return \"Strongly abusive\"\n",
         "  elif row['Annotator1_is_abuse.-3'] == '1':\n",
-        "    return \"Very strongly abusive\"\n"
+        "    return \"Very strongly abusive\"\n",
+        "\n",
+        "my_tags = ['Not abusive', 'Ambiguous', 'Midly abusive', 'Strongly abusive', 'Very strongly abusive']\n",
+        "df['abusive_level'] = df.apply(lambda row: categorise(row), axis=1) \n",
+        "df = df[pd.notnull(df['abusive_level'])]\n",
+        "# df.tail(10)"
       ],
       "metadata": {
         "id": "fDjqnPHcXs4I"
       },
-      "execution_count": 24,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -125,71 +125,180 @@
         "    text = REPLACE_BY_SPACE_RE.sub(' ', text) # replace REPLACE_BY_SPACE_RE symbols by space in text\n",
         "    text = BAD_SYMBOLS_RE.sub('', text) # delete symbols which are in BAD_SYMBOLS_RE from text\n",
         "    text = ' '.join(word for word in text.split() if word not in STOPWORDS) # delete stopwors from text\n",
-        "    return text\n"
+        "    return text\n",
+        "    \n",
+        "df['user'] = df['user'].apply(clean_text)\n",
+        "data = df[['user','abusive_level']]\n",
+        "X = data.user\n",
+        "Y = data.abusive_level\n",
+        "# https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size = 0.3, random_state = 42)\n",
+        "# data.tail(10)"
       ],
       "metadata": {
         "id": "RuBvcSA-e3YU"
       },
-      "execution_count": 25,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\"\"\"\n",
-        "MAIN MODEL IMPLEMENTATION\n",
-        "-------------------------------------------\n",
-        "NLP ALGO: TFIDF\n",
-        "MODEL: Linear Support Vector Machine\n",
-        "VALIDATION METHOD: kFold\n",
+        "Naive Bayes Classifier \n",
+        "Idea: text is categorized based on TF*IDF (term frequency * inverse data frequency)\n",
         "\"\"\"\n",
+        "\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
-        "from sklearn.linear_model import SGDClassifier\n",
-        "def predict_abusive_level(userInput):\n",
-        "  url_train_data = 'https://raw.githubusercontent.com/amandacurry/convabuse/main/2_splits/ConvAbuseEMNLPtrain.csv'\n",
-        "  df = pd.read_csv(url_train_data)\n",
-        "  my_tags = ['Not abusive', 'Ambiguous', 'Midly abusive', 'Strongly abusive', 'Very strongly abusive']\n",
-        "  df['abusive_level'] = df.apply(lambda row: categorise(row), axis=1) \n",
-        "  df = df[pd.notnull(df['abusive_level'])]\n",
-        "  df['user'] = df['user'].apply(clean_text)\n",
-        "  data = df[['user','abusive_level']]\n",
-        "  X = data.user\n",
-        "  Y = data.abusive_level\n",
-        "  kfold = KFold(n_splits=10, random_state=100, shuffle=True)\n",
-        "  sgd = Pipeline([('vect', CountVectorizer()),\n",
-        "                ('tfidf', TfidfTransformer()),\n",
-        "                ('clf', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, random_state=42, max_iter=5, tol=None)),\n",
-        "               ])\n",
-        "  ml = sgd.fit(X, Y)\n",
-        "  print(ml.predict([userInput]))"
+        "\n",
+        "nb = Pipeline([('vect', CountVectorizer()),\n",
+        "               ('tfidf', TfidfTransformer()),\n",
+        "               ('clf', MultinomialNB()),\n",
+        "              ])\n",
+        "nb.fit(X_train, y_train)\n",
+        "\n",
+        "# %%time\n",
+        "from sklearn.metrics import classification_report\n",
+        "y_pred = nb.predict(X_test)\n",
+        "\n",
+        "print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
+        "print(classification_report(y_test, y_pred,target_names=my_tags,zero_division=1))"
       ],
       "metadata": {
-        "id": "RSoVXLtToBqS"
-      },
-      "execution_count": 61,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "predict_abusive_level(\"I hope you die\")\n"
-      ],
-      "metadata": {
-        "id": "f1vSaGxKptwE",
-        "outputId": "0e3396c6-272d-41bf-aae0-beaca5fab33f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q-jOeX_2tncl",
+        "outputId": "e79eedf9-3c49-4c27-85f5-414f32211e06"
       },
-      "execution_count": 66,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Very strongly abusive']\n"
+            "accuracy 0.786096256684492\n",
+            "                       precision    recall  f1-score   support\n",
+            "\n",
+            "          Not abusive       1.00      0.00      0.00         6\n",
+            "            Ambiguous       1.00      0.00      0.00        16\n",
+            "        Midly abusive       0.79      1.00      0.88       144\n",
+            "     Strongly abusive       0.60      0.20      0.30        15\n",
+            "Very strongly abusive       1.00      0.00      0.00         6\n",
+            "\n",
+            "             accuracy                           0.79       187\n",
+            "            macro avg       0.88      0.24      0.24       187\n",
+            "         weighted avg       0.81      0.79      0.70       187\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Linear Support Vector Machine\n",
+        "Idea: text is categorized based on TF*IDF (term frequency * inverse data frequency)\n",
+        "\"\"\"\n",
+        "\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "\n",
+        "sgd = Pipeline([('vect', CountVectorizer()),\n",
+        "                ('tfidf', TfidfTransformer()),\n",
+        "                ('clf', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, random_state=42, max_iter=5, tol=None)),\n",
+        "               ])\n",
+        "sgd.fit(X_train, y_train)\n",
+        "\n",
+        "# %%time\n",
+        "\n",
+        "y_pred = sgd.predict(X_test)\n",
+        "\n",
+        "print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
+        "print(classification_report(y_test, y_pred,target_names=my_tags,zero_division=1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xejOTK2HwSPe",
+        "outputId": "a4386bfe-2347-4885-f742-8b01da8e670e"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy 0.8021390374331551\n",
+            "                       precision    recall  f1-score   support\n",
+            "\n",
+            "          Not abusive       0.00      0.00      0.00         6\n",
+            "            Ambiguous       0.33      0.12      0.18        16\n",
+            "        Midly abusive       0.85      0.97      0.90       144\n",
+            "     Strongly abusive       0.57      0.53      0.55        15\n",
+            "Very strongly abusive       0.50      0.17      0.25         6\n",
+            "\n",
+            "             accuracy                           0.80       187\n",
+            "            macro avg       0.45      0.36      0.38       187\n",
+            "         weighted avg       0.74      0.80      0.76       187\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Logistic Regression\n",
+        "Idea: text is categorized based on TF*IDF (term frequency * inverse data frequency)\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "logreg = Pipeline([('vect', CountVectorizer()),\n",
+        "                ('tfidf', TfidfTransformer()),\n",
+        "                ('clf', LogisticRegression(n_jobs=1, C=1e5, max_iter=100000)),\n",
+        "               ])\n",
+        "logreg.fit(X_train, y_train)\n",
+        "\n",
+        "# %%time\n",
+        "\n",
+        "y_pred = logreg.predict(X_test)\n",
+        "\n",
+        "print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
+        "print(classification_report(y_test, y_pred,target_names=my_tags,zero_division=1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MsjGQf4vwXvk",
+        "outputId": "de50b25b-5277-46c7-da83-a0f54dd4f2d3"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy 0.7914438502673797\n",
+            "                       precision    recall  f1-score   support\n",
+            "\n",
+            "          Not abusive       0.00      0.00      0.00         6\n",
+            "            Ambiguous       0.31      0.25      0.28        16\n",
+            "        Midly abusive       0.86      0.96      0.90       144\n",
+            "     Strongly abusive       0.62      0.33      0.43        15\n",
+            "Very strongly abusive       0.50      0.17      0.25         6\n",
+            "\n",
+            "             accuracy                           0.79       187\n",
+            "            macro avg       0.46      0.34      0.37       187\n",
+            "         weighted avg       0.75      0.79      0.76       187\n",
+            "\n"
           ]
         }
       ]
